# ufoNormalizer-pre-commit-klim

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
src/: main.py
