[metadata]
name = ufonormalizer_pre_commit
version = 1.0.1
description = A pre-commit hook for ufoNormalizer.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/klim-type-foundry/ufoNormalizer-pre-commit-klim
author = Peter Dekkers
author_email = ufo-precommit@goodcode.nz
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    ruamel.yaml>=0.15
    ufonormalizer @ git+https://github.com/klim-type-foundry/ufoNormalizer.git@1.0.0
    tomli>=1.1.0;python_version<"3.13"
python_requires = >=3.10

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    ufo-normalizer = src.main:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
